--- a/index.html
+++ b/index.html
@@ -8,90 +8,137 @@
     <meta name="keywords" content="free prostate guide, prostate remedy, shrink prostate, painful urination, men's wellness">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
     <style>
-        .sticky-header {
-    position: sticky;
-    top: 0;
-    z-index: 1000;
-    background-color: #2d512d;
-    padding: 10px 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
+        .* {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-  .nav-container {
-    max-width: 1200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      scroll-behavior: smooth;
+      background-color: #f4f4f4;
+    }
 
-  .logo {
-    font-size: 1.4rem;
-    font-weight: bold;
-    color: #dfffd6;
-  }
+    .sticky-header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background-color: #2d512d;
+      padding: 10px 20px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
 
-  .main-nav {
-    display: flex;
-    align-items: center;
-    position: relative;
-  }
+    .nav-container {
+      max-width: 1200px;
+      margin: auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
 
-  .main-nav > a,
-  .dropdown > a {
-    margin-left: 20px;
-    text-decoration: none;
-    font-weight: 500;
-    color: #d0ffd0;
-    font-size: 1rem;
-    transition: color 0.3s ease;
-  }
+    .logo {
+      font-size: 1.4rem;
+      font-weight: bold;
+      color: #dfffd6;
+    }
 
-  .main-nav a:hover {
-    color: #ffffff;
-  }
+    .main-nav {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
 
-  /* Dropdown Menu */
-  .dropdown {
-    position: relative;
-  }
+    .main-nav a {
+      color: #d0ffd0;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 1rem;
+      transition: color 0.3s ease;
+    }
 
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    top: 30px;
-    background-color: #2d512d;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-    padding: 10px 0;
-    border-radius: 4px;
-    min-width: 200px;
-    z-index: 1001;
-  }
+    .main-nav a:hover {
+      color: #fff;
+    }
 
-  .dropdown-content a {
-    display: block;
-    padding: 10px 20px;
-    color: #d0ffd0;
-    text-decoration: none;
-    font-size: 0.95rem;
-    white-space: nowrap;
-  }
+    /* Dropdown */
+    .dropdown {
+      position: relative;
+    }
 
-  .dropdown-content a:hover {
-    background-color: #3c6b3c;
-    color: #fff;
-  }
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #2d512d;
+      top: 40px;
+      left: 0;
+      border-radius: 4px;
+      min-width: 200px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      z-index: 1001;
+    }
 
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-        }
+    .dropdown-content a {
+      display: block;
+      padding: 10px 20px;
+      color: #d0ffd0;
+      white-space: nowrap;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #3c6b3c;
+      color: white;
+    }
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+    }
+
+    /* Mobile */
+    .hamburger {
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      cursor: pointer;
+    }
+
+    .hamburger div {
+      width: 25px;
+      height: 3px;
+      background: #dfffd6;
+    }
+
+    .mobile-nav {
+      display: none;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+    }
+
+    .mobile-nav.show {
+      display: flex;
+    }
+
+    @media (max-width: 768px) {
+      .main-nav {
+        display: none;
+      }
+
+      .hamburger {
+        display: flex;
+      }
+
+      .dropdown-content {
+        position: static;
+        box-shadow: none;
+      }
+
+      .dropdown:hover .dropdown-content {
+        display: none;
+      }
+    }
         .container {
             max-width: 600px;
             margin: 50px auto;
@@ -234,18 +281,20 @@
 <header class="sticky-header">
   <div class="nav-container">
     <div class="logo">🌿 Green Global Empire</div>
+    <div class="hamburger" onclick="toggleMobileNav()">
+      <div></div><div></div><div></div>
+    </div>
     <nav class="main-nav">
       <a href="#home">Home</a>
 
-      <!-- Products Dropdown -->
       <div class="dropdown">
-        <a href="#products">Products ▾</a>
+        <a href="#">Products ▾</a>
         <div class="dropdown-content">
           <a href="#prostate">Prostate Health</a>
           <a href="#diabetes">Diabetes Health</a>
           <a href="#liver">Liver Detox</a>
-          <a href="#fertility"> Fertility</a>
-          <a href="#hepatitis">Hepatitis</a>
+          <a href="#fertility">Male Fertility</a>
+          <a href="#cholesterol">Cholesterol Control</a>
           <a href="#immunity">Immune Booster</a>
           <a href="#ulcer">Ulcer Treatment</a>
           <a href="#bp">Blood Pressure Support</a>
@@ -254,6 +303,24 @@
         </div>
       </div>
 
+      <a href="#blog">Blog</a>
+      <a href="#contact">Contact</a>
+      <a href="#mlm">Multi Level Marketing</a>
+    </nav>
+
+    <!-- Mobile Nav -->
+    <nav class="mobile-nav" id="mobileNav">
+      <a href="#home">Home</a>
+      <a href="#prostate">Prostate Health</a>
+      <a href="#diabetes">Diabetes Health</a>
+      <a href="#liver">Liver Detox</a>
+      <a href="#fertility">Male Fertility</a>
+      <a href="#cholesterol">Cholesterol Control</a>
+      <a href="#immunity">Immune Booster</a>
+      <a href="#ulcer">Ulcer Treatment</a>
+      <a href="#bp">Blood Pressure Support</a>
+      <a href="#skin">Skin & Beauty</a>
+      <a href="#wellness">Total Wellness Pack</a>
       <a href="#blog">Blog</a>
       <a href="#contact">Contact</a>
       <a href="#mlm">Multi Level Marketing</a>
