--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <meta name="description" content="Get our free prostate wellness guide showing how thousands of men reduce enlarged prostate symptoms naturally in 30 days or less.">
     <meta name="keywords" content="free prostate guide, prostate remedy, shrink prostate, painful urination, men's wellness">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16892089101"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-16892089101');
+</script>
+
+</head>
     <style>
         .sticky-header {
     position: sticky;
@@ -229,7 +239,6 @@
 }
 
     </style>
-</head>
 <body>
   <!-- WhatsApp Chat Button -->
 <a href="https://wa.me/2348033731636?text=Hello%20Dr%20Dee%2C%20I%20need%20help%20with%20prostate%20treatment" 
