--- a/diab.html
+++ b/diab.html
@@ -6,6 +6,14 @@
   <title>🌿 Dr. Dee’s CIMETIN | Diabetes Herbal Treatment</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="diastyle.css">
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16892089101"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-16892089101');
+</script>
 </head>
 <body>
 <header class="sticky-header">
