--- a/prostalin.html
+++ b/prostalin.html
@@ -5,6 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="prostyle.css" />
   <title>Prostalin Plus – Natural Prostate Treatment</title>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16892089101"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'AW-16892089101');
+</script>
+
 </head>
 <body>
 <header class="sticky-header">
